Tested with helm chart bitnami/spark 9.0.2 3.5.1